3/modules/vpc/main.tf
resource "aws_vpc" "main" {
    cidr_block           = var.vpc_cidr
    enable_dns_hostnames = var.enable_dns_hostnames
    tags                 = merge(local.tags, { Name = var.vpc_name })
}

data "aws_availability_zones" "available" {
    state = "available"
}

resource "aws_subnet" "public" {
    count = 2
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.${count.index+1}.0/24"
    availability_zone = data.aws_availability_zones.available.names[count.index]
    map_public_ip_on_launch = true
    tags = merge(
        local.tags, 
            { 
                Name = "${var.vpc_name}-public-${count.index+1}" 
                Type = "Public"
            } 
        )
    }

resource "aws_subnet" "private" {
    count = 2
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.${count.index+101}.0/24"
    availability_zone = data.aws_availability_zones.available.names[count.index]
    tags = merge(
        local.tags, 
            { 
                Name = "${var.vpc_name}-private-${count.index+1}" 
                Type = "Private"
            } 
        )
    }

resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id
    tags = merge(
        local.tags, 
        { 
            Name = "${var.vpc_name}-igw" 
            }
            )
}
resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }
    tags = merge(
        local.tags, 
        { 
            Name = "${var.vpc_name}-public-rt" 
            }
            )
}   
resource "aws_route_table_association" "public" {
    count = 2
    subnet_id      = aws_subnet.public[count.index].id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id
    tags = merge(
        local.tags, 
        { 
            Name = "${var.vpc_name}-private-rt" 
            }
            )
}
resource "aws_route_table_association" "private" {
    count = 2
    subnet_id      = aws_subnet.private[count.index].id
    route_table_id = aws_route_table.private.id
}
